noob level completed

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 
 url: "http://legtzp.github.io"
-title: "{ Luis Gutiérrez }"
+title: "| Luis Gutiérrez |"
 description: "Website used to report the progress on the Git course for Semana I."
 keywords: "LuisE legtz semanaI git"
 favicon: "/img/favicon.ico"
